@@ -7,7 +7,6 @@ eglibc (2.10.2-3) UNRELEASED; urgency=low
     them and then starting them again.  Closes: #211784.
   * Use gcc/g++-4.4 on hppa, hurd-i386, mips and mipsel.
   * Mention EGLIBC in packages description.  Closes: #559121.
-  * kfreebsd/local-sysdeps.diff: update to revision 2977 (from glibc-bsd).
   * Add support for sparc64 architecture. 
   * debian/sysdeps/mips.mk, debian/sysdeps/mipsel.mk: remove hack to support
     buildds kernels now that they have been upgraded.
@@ -18,6 +17,9 @@ eglibc (2.10.2-3) UNRELEASED; urgency=low
   * sysdeps/hurd.mk: Enable testsuite.
   * patches/hurd-i386/submitted-getcwd.diff: Add patch to fix spurious port
     deallocation.
+
+  [ Petr Salinger]
+  * kfreebsd/local-sysdeps.diff: update to revision 2904 (from glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 16 Dec 2009 18:15:41 +0100
 
